--- a/ewm-stat/src/main/resources/application.properties
+++ b/ewm-stat/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.sql.init.mode=always
 #---
 spring.datasource.url=jdbc:postgresql://localhost:5432/ewm-stat
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=Explorer
-spring.datasource.password=Explorer
+spring.datasource.username=explorer
+spring.datasource.password=explorer
